Fixed svcards on narrow devices

--- a/Styles/style_main.css
+++ b/Styles/style_main.css
@@ -294,7 +294,7 @@ hr:after {
 .svcard {
   align-self: flex-start;
   border: 3px solid #004444;
-  max-width: 300px;
+  width: 300px;
   min-width: min-content;
   margin-bottom: 20px;
 }
